1.9.4
-----


1.9.3
-----

Updated the Groovy 1.7.x series to be 1.7.3.

Minor fixes to the exit code and other processing for the Windows launch scripts to keep in line with Groovy
ones.

Corrected Windows batch file processing to avoid assumptions made in startGroovy.bat.

This release is really being made because it transpires that the 1.9.2 release for the Groovy 1.7 series was
compiled against Groovy 1.7.1 which had a breaking API change that was reverted for Groovy 1.7.2 and thus
1.7.3.  The consequence is that the version 1.9.2 gant_groovy1.7 artefact is incompatible with Groovy 1.7.2
and 1.7.3. 


1.9.2
------

Various minor bug fixes and refactorings, including switching to Groovy 1.7.1 as the main version of Groovy,
JUnit 4.8.1 as the unit test framework, and Ant 1.8.0 as the principal version of Ant used.

Maven and Gant builds removed in favour of focusing solely on Gradle as the build for the Gant project.


1.9.1
-----

The change to the Gradle build tool for release of Gant 1.9.0 led to a an error in the stream processing of
the launch scripts which led to a failure to start Gant.  This release is to fix that problem.


1.9.0
-----

Added the ability to skip the tests when using the Maven target set.  Use -DskipTest=true on the command
line to stop the tests being compiled and run, otherwise they will be.

Change the way in which the final message is output when Gant is executed from the command line from being
hardwired to being the execution of a hook, terminateHook.  cf. GANT-104.

Altered the Gant Ant task so as to provide an inheritAll attribute.  cf. GANT-110.

Switched GantException from extending RuntimeException to extending org.apache.tools.ant.BuildException so
as to allow better consistency with use of Gant from Ant.  cf. GANT-111.

Switch from using Ant as a boostrap and Gant for other processing to using Gradle for all build issues
(except distribution release as there is still a problem there).
