@@ -1,6 +1,13 @@
 1.9.4
 -----
 
+Add Groovy 1.8 to the Groovy series supported by Gant.  As at 2010-08-07, Groovy 1.8.0-beta-1 is the version
+in the Maven repository.
+
+Groovy 1.6.9 is now used for the 1.6 series build of Gant and 1.7.4 for the 1.7 series build.
+
+Deb files are now built as part of the release process.
+
 
 1.9.3
 -----
